--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou Renata Soares do Rego, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__navegacao" href="https://github.com/rafaballerini">
+                <a class="apresentacao__links__navegacao" href="https://github.com/renatasoaresdorego">
                     <img src="./assets/assets/github.png">
                 Github
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/rafaellaballerini">
+                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/renata-soares-do-rego">
                     <img src="./assets/assets/linkedin.png">
                     Linkedin
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://twitch.tv/guilimadev">
+                <a class="apresentacao__links__navegacao" href="https://twitch.tv/druidelicia">
                     <img src="./assets/assets/twitch.png">
                     Twitch
                 </a>
             </div>
         </section>
-        <img  class="apresentacao__imagem" src="./assets/assets/Imagem.png" alt="Foto da Renata Soares do Rego programando" >
+        <img  class="apresentacao__imagem" src="./assets/assets/renata.jpg" alt="Foto da Renata Soares do Rego programando" >
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Renata.</p>
